@@ -5,6 +5,140 @@
 using namespace std;
 using namespace Susy;
 
+
+/*--------------------------------------------------------------------------------*/
+//Copy constructor
+/*--------------------------------------------------------------------------------*/
+Particle::Particle(const Particle &rhs):
+  TLorentzVector(rhs),
+  idx(rhs.idx),
+  pt(rhs.pt),
+  eta(rhs.eta),
+  phi(rhs.phi),
+  m(rhs.m)
+{
+}
+/*--------------------------------------------------------------------------------*/
+//Assignment operator
+/*--------------------------------------------------------------------------------*/
+Particle& Particle::operator=(const Particle &rhs)
+{
+  if (this != &rhs) {
+    TLorentzVector::operator=(rhs);
+    idx  = rhs.idx; 
+    pt = rhs.pt; 
+    eta = rhs.eta; 
+    phi = rhs.phi; 
+    m = rhs.m; 
+  }
+  return *this;
+}
+
+/*--------------------------------------------------------------------------------*/
+//Copy constructor
+/*--------------------------------------------------------------------------------*/
+Lepton::Lepton(const Lepton &rhs):
+  Particle(rhs),
+  q(rhs.q),
+  ptcone20(rhs.ptcone20),
+  ptcone30(rhs.ptcone30),
+  d0(rhs.d0),
+  errD0(rhs.errD0),
+  z0(rhs.z0),
+  errZ0(rhs.errZ0),
+  d0Unbiased(rhs.d0Unbiased),
+  errD0Unbiased(rhs.errD0Unbiased),
+  z0Unbiased(rhs.z0Unbiased),
+  errZ0Unbiased(rhs.errZ0Unbiased),
+  mcType(rhs.mcType),
+  mcOrigin(rhs.mcOrigin),
+  truthMatchType(rhs.truthMatchType),
+  effSF(rhs.effSF),
+  errEffSF(rhs.errEffSF),
+  trigFlags(rhs.trigFlags)
+{
+}
+/*--------------------------------------------------------------------------------*/
+//Assignment operator
+/*--------------------------------------------------------------------------------*/
+Lepton& Lepton::operator=(const Lepton &rhs)
+{
+  if (this != &rhs) {
+    Particle::operator=(rhs);
+    q = rhs.q; 
+    ptcone20 = rhs.ptcone20;
+    ptcone30 = rhs.ptcone30;
+    d0 = rhs.d0;
+    errD0 = rhs.errD0;
+    z0 = rhs.z0;
+    errZ0 = rhs.errZ0;
+    d0Unbiased = rhs.d0Unbiased;
+    errD0Unbiased = rhs.errD0Unbiased;
+    z0Unbiased = rhs.z0Unbiased;
+    errZ0Unbiased = rhs.errZ0Unbiased;
+    mcType = rhs.mcType;
+    mcOrigin = rhs.mcOrigin;
+    truthMatchType = rhs.truthMatchType;
+    effSF = rhs.effSF;
+    errEffSF = rhs.errEffSF;
+    trigFlags = rhs.trigFlags;
+  }
+  return *this;
+}
+
+/*--------------------------------------------------------------------------------*/
+//Copy constructor
+/*--------------------------------------------------------------------------------*/
+Electron::Electron(const Electron &rhs):
+  Lepton(rhs),
+  clusE(rhs.clusE),
+  clusEta(rhs.clusEta),
+  mediumPP(rhs.mediumPP),
+  tightPP(rhs.tightPP),
+  etcone30Corr(rhs.etcone30Corr),
+  topoEtcone30Corr(rhs.topoEtcone30Corr),
+  isChargeFlip(rhs.isChargeFlip),
+  ees_z_up(rhs.ees_z_up),
+  ees_z_dn(rhs.ees_z_dn),  
+  ees_mat_up(rhs.ees_mat_up),
+  ees_mat_dn(rhs.ees_mat_dn),
+  ees_ps_up(rhs.ees_ps_up),
+  ees_ps_dn(rhs. ees_ps_dn),
+  ees_low_up(rhs.ees_low_up),
+  ees_low_dn(rhs.ees_low_dn),
+  eer_up(rhs.eer_up),
+  eer_dn(rhs.eer_dn)
+{
+}
+/*--------------------------------------------------------------------------------*/
+//Assignment operator
+/*--------------------------------------------------------------------------------*/
+Electron& Electron::operator=(const Electron &rhs)
+{
+  if (this != &rhs) {
+    Lepton::operator=(rhs);
+    clusE = rhs.clusE;
+    clusEta = rhs.clusEta;
+    mediumPP = rhs.mediumPP;
+    tightPP = rhs.tightPP;
+    etcone30Corr = rhs.etcone30Corr;
+    topoEtcone30Corr = rhs.topoEtcone30Corr;
+    isChargeFlip = rhs.isChargeFlip;
+    ees_z_up = rhs.ees_z_up;
+    ees_z_dn = rhs.ees_z_dn;  
+    ees_mat_up = rhs.ees_mat_up;
+    ees_mat_dn = rhs.ees_mat_dn;
+    ees_ps_up = rhs.ees_ps_up;
+    ees_ps_dn = rhs. ees_ps_dn;
+    ees_low_up = rhs.ees_low_up;
+    ees_low_dn = rhs.ees_low_dn;
+    eer_up = rhs.eer_up;
+    eer_dn = rhs.eer_dn;
+  }
+  return *this;
+}
+
+
 /*--------------------------------------------------------------------------------*/
 // Electron Set State
 /*--------------------------------------------------------------------------------*/
@@ -49,6 +183,41 @@ void Electron::print() const
 }
 
 /*--------------------------------------------------------------------------------*/
+//Copy constructor
+/*--------------------------------------------------------------------------------*/
+Muon::Muon(const Muon &rhs):
+  Lepton(rhs),
+  isCombined(rhs.isCombined),
+  thetaPV(rhs.thetaPV),
+  etcone30(rhs.etcone30),
+  ptcone30ElStyle(rhs.ptcone30ElStyle),
+  ms_up(rhs.ms_up),
+  ms_dn(rhs.ms_dn),
+  id_up(rhs.id_up),
+  id_dn(rhs.id_dn)
+{
+}
+/*--------------------------------------------------------------------------------*/
+//Assignment operator
+/*--------------------------------------------------------------------------------*/
+Muon& Muon::operator=(const Muon &rhs)
+{
+  if (this != &rhs) {
+    Lepton::operator=(rhs);
+    isCombined = rhs.isCombined;
+    thetaPV = rhs.thetaPV;
+    etcone30 = rhs.etcone30;
+    ptcone30ElStyle = rhs.ptcone30ElStyle;
+    ms_up = rhs.ms_up;
+    ms_dn = rhs.ms_dn;
+    id_up = rhs.id_up;
+    id_dn = rhs.id_dn;
+  }
+  return *this;
+}
+
+
+/*--------------------------------------------------------------------------------*/
 // Muon Set State
 /*--------------------------------------------------------------------------------*/
 void Muon::setState(int sys)
@@ -80,6 +249,42 @@ void Muon::print() const
        << endl;
   cout.precision(6);
   cout.unsetf(ios_base::fixed);
+}
+
+/*--------------------------------------------------------------------------------*/
+//Copy constructor
+/*--------------------------------------------------------------------------------*/
+Jet::Jet(const Jet &rhs):
+  Particle(rhs),
+  jvf(rhs.jvf),
+  truthLabel(rhs.truthLabel),
+  matchTruth(rhs.matchTruth),
+  sv0(rhs.sv0),
+  combNN(rhs.combNN),
+  mv1(rhs.mv1),
+  jes_up(rhs.jes_up),
+  jes_dn(rhs.jes_dn),
+  jer(rhs.jer)
+{
+}
+/*--------------------------------------------------------------------------------*/
+//Assignment operator
+/*--------------------------------------------------------------------------------*/
+Jet& Jet::operator=(const Jet &rhs)
+{
+  if (this != &rhs) {
+    Particle::operator=(rhs);
+    jvf  = rhs.jvf; 
+    truthLabel = rhs.truthLabel;
+    matchTruth = rhs.matchTruth;
+    sv0 = rhs.sv0;
+    combNN = rhs.combNN;
+    mv1 = rhs.mv1;
+    jes_up = rhs.jes_up;
+    jes_dn = rhs.jes_dn;
+    jer = rhs.jer;
+  }
+  return *this;
 }
 
 /*--------------------------------------------------------------------------------*/
@@ -115,6 +320,51 @@ void Jet::print() const
   cout.unsetf(ios_base::fixed);
 }
 
+
+
+/*--------------------------------------------------------------------------------*/
+//Copy constructor
+/*--------------------------------------------------------------------------------*/
+Tau::Tau(const Tau &rhs):
+  Lepton(rhs),
+  author(rhs.author),
+  nTrack(rhs.nTrack),
+  eleBDT(rhs.eleBDT),
+  jetBDT(rhs.jetBDT),
+  jetBDTSigLoose(rhs.jetBDTSigLoose),
+  jetBDTSigMedium(rhs.jetBDTSigMedium),
+  jetBDTSigTight(rhs.jetBDTSigTight),
+  eleBDTLoose(rhs.eleBDTLoose),
+  eleBDTMedium(rhs.eleBDTMedium),
+  eleBDTTight(rhs.eleBDTTight),
+  muonVeto(rhs.muonVeto),
+  trueTau(rhs.trueTau)
+{
+}
+/*--------------------------------------------------------------------------------*/
+//Assignment operator
+/*--------------------------------------------------------------------------------*/
+Tau& Tau::operator=(const Tau &rhs)
+{
+  if (this != &rhs) {
+    Lepton::operator=(rhs);
+     author  = rhs.author; 
+     nTrack = rhs.nTrack;
+     eleBDT = rhs.eleBDT;
+     jetBDT = rhs.jetBDT;
+     jetBDTSigLoose = rhs.jetBDTSigLoose;
+     jetBDTSigMedium = rhs.jetBDTSigMedium;
+     jetBDTSigTight = rhs.jetBDTSigTight;
+     eleBDTLoose = rhs.eleBDTLoose;
+     eleBDTMedium = rhs.eleBDTMedium;
+     eleBDTTight = rhs.eleBDTTight;
+     muonVeto = rhs.muonVeto;
+     trueTau = rhs.trueTau;
+  }
+  return *this;
+}
+
+
 /*--------------------------------------------------------------------------------*/
 // Tau print
 /*--------------------------------------------------------------------------------*/
@@ -132,6 +382,27 @@ void Tau::print() const
 }
 
 /*--------------------------------------------------------------------------------*/
+//Copy constructor
+/*--------------------------------------------------------------------------------*/
+Photon::Photon(const Photon &rhs):
+  Particle(rhs),
+  isConv(rhs.isConv)
+{
+}
+/*--------------------------------------------------------------------------------*/
+//Assignment operator
+/*--------------------------------------------------------------------------------*/
+Photon& Photon::operator=(const Photon &rhs)
+{
+  if (this != &rhs) {
+    Particle::operator=(rhs);
+    isConv  = rhs.isConv; 
+  }
+  return *this;
+}
+
+
+/*--------------------------------------------------------------------------------*/
 // Met print
 /*--------------------------------------------------------------------------------*/
 void Met::print() const
@@ -143,6 +414,43 @@ void Met::print() const
   cout.unsetf(ios_base::fixed);
 }
 
+
+/*--------------------------------------------------------------------------------*/
+//Copy constructor
+/*--------------------------------------------------------------------------------*/
+Met::Met(const Met &rhs):
+  TObject(rhs),
+  Et(rhs.Et),
+  phi(rhs.phi),
+  refEle(rhs.refEle),
+  refMuo(rhs.refMuo),
+  refJet(rhs.refJet),
+  softJet(rhs.softJet),
+  refGamma(rhs.refGamma),
+  refCell(rhs.refCell),
+  sys(rhs.sys)
+{
+}
+/*--------------------------------------------------------------------------------*/
+//Assignment operator
+/*--------------------------------------------------------------------------------*/
+Met& Met::operator=(const Met &rhs)
+{
+  if (this != &rhs) {
+    TObject::operator=(rhs);
+     Et  = rhs.Et; 
+     phi  = rhs.phi; 
+     refEle= rhs.refEle; 
+     refMuo= rhs.refMuo; 
+     refJet= rhs.refJet; 
+     softJet= rhs.softJet; 
+     refGamma= rhs.refGamma; 
+     refCell= rhs.refCell; 
+     sys= rhs.sys; 
+
+  }
+  return *this;
+}
 /*--------------------------------------------------------------------------------*/
 // Event print
 /*--------------------------------------------------------------------------------*/
